feat: endpoints improvements
