# server/routes/ingredients/index.ts
@@ -1,25 +1,51 @@
 const querySchema = z.object({
-  offset: z.number().int().default(0),
-  limit: z.number().int().default(10),
+  offset: z.coerce.number().int().default(0),
+  limit: z.coerce.number().int().default(10),
+  withCategories: z.coerce.boolean().default(false),
+  all: z.coerce.boolean().default(false),
 });
 
 export default defineEventHandler(async (event) => {
-  const { offset = 0, limit = 10 } = getQuery(event);
-  const convertedOffset = Number(offset);
-  const convertedLimit = Number(limit);
-
-  // Assuming getUserId is a utility function to get the current user's ID
+  const { authorizationBase } = useRuntimeConfig();
   const userId = await getUserId(event);
+  const user = await getInitialUser(event, authorizationBase);
+  const { all, offset, limit, withCategories } = await zodValidateData(getQuery(event), querySchema.parse);
 
-  await zodValidateData(
+  if (all && !can(user, "get-all-ingredients")) {
+    throw createError({ statusCode: 403, statusMessage: "Forbidden" });
+  }
+
+  if (!withCategories) {
+    return ModelIngredients.find(all ? {} : { userId })
+      .limit(limit)
+      .skip(offset);
+  }
+
+  return await ModelIngredients.aggregate([
+    ...(all ? [] : [{ $match: { userId } }]),
     {
-      offset: convertedOffset,
-      limit: convertedLimit,
+      $lookup: {
+        from: "categories",
+        localField: "categoryId",
+        foreignField: "_id",
+        as: "categories",
+        pipeline: [
+          ...(can(user, "get-all-categories") ? [] : [{ $match: { userId } }]),
+          {
+            $limit: 1
+          }
+        ]
+      }
     },
-    querySchema.parse
-  );
-  // Fetch ingredients only for the current user
-  return ModelIngredients.find({ userId })
-    .limit(convertedLimit)
-    .skip(convertedOffset);
+    {
+      $set: {
+        category: {
+          $arrayElemAt: ["$categories", 0]
+        }
+      }
+    },
+    {
+      $unset: ["categories"]
+    }
+  ])
 });
