# server/routes/sets/index.ts
@@ -1,3 +1,4 @@
+
 const querySchema = z.object({
   offset: z.number().int().default(0),
   limit: z.number().int().default(10),
@@ -22,10 +23,86 @@ export default defineEventHandler(async (event) => {
 
   const userId = await getUserId(event);
 
-  return ModelSets.find({
-    userId,
-    ...buildDateFilter(startDate as string, endDate as string),
-  })
-    .limit(convertedLimit)
-    .skip(convertedOffset);
+  return await ModelSets.aggregate([
+    {
+      $match: {
+        userId,
+        ...buildDateFilter(startDate as string, endDate as string),
+      }
+    },
+    {
+      $unwind: {
+        path: "$ingredients",
+        preserveNullAndEmptyArrays: true
+      }
+    },
+    {
+      $lookup: {
+        from: "ingredients",
+        let: { id: "$ingredients.id" },
+        pipeline: [
+          {
+            $match: {
+              $expr: {
+                $eq: ["$$id", { $toString: "$_id" }]
+              }
+            }
+          },
+          {
+            $lookup: {
+              from: "categories",
+              localField: "categoryId",
+              foreignField: "_id",
+              pipeline: [
+                {
+                  $limit: 1
+                }
+              ],
+              as: "categoryDetails"
+            }
+          },
+          {
+            $limit: 1
+          }
+        ],
+        as: "ingredientDetails"
+      }
+    },
+    {
+      $unwind: {
+        path: "$ingredientDetails",
+        preserveNullAndEmptyArrays: true
+      }
+    },
+    {
+      $group: {
+        _id: "$_id",
+        userId: { $first: "$userId" },
+        createdAt: { $first: "$createdAt" },
+        updatedAt: { $first: "$updatedAt" },
+        ingredients: {
+          $push: {
+            id: "$ingredients.id",
+            value: "$ingredients.value",
+            additionalInfo: "$ingredients.additionalInfo",
+            name: "$ingredientDetails.name",
+            categoryId: "$ingredientDetails.categoryId",
+            categoryName: { $first: "$ingredientDetails.categoryDetails.name" },
+            calories: "$ingredientDetails.calories",
+            proteins: "$ingredientDetails.proteins",
+            grams: "$ingredientDetails.grams"
+          }
+        }
+      }
+    },
+    {
+      $sort: { createdAt: -1 }
+    },
+    {
+      $skip: convertedOffset
+    },
+    {
+      $limit: convertedLimit
+    }
+  ]);
 });
